# texteditor

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .user_loc  BuildAndRun.md  CHANGELOG  CONTRIBUTING  FAQ.md  LICENSE  MANIFEST.in  Makefile  README.md  TODO  appconfig.ini  builder.py  crowdin.yml  embedimgs.py  makerelease.fpm  meson.build  meson_options.txt  pyproject.toml  requirements.txt  setup.py  textworker.run  upd_trans.sh  updater.py  version.json
.github/workflows/: README.md  buildeb.yml  deb.yml  main.yml  makeexe.yml  python-app.yml  release.yml  wheel.yml  wheeltk.yml  win.yml  win_release.yml
data/: org.lebao3105.texteditor.desktop  textworker.desktop
data/DEBIAN/: changelog  control
debian/: .gitignore  changelog  control  copyright  files  postinst  rules
debian/source/: include-binaries
makerelease/: .gitignore  builder.py  files.py  makeappimage.sh  miscs.py  readme.txt  setupwin.py
po/: POTFILES  POTFILES.in  WXRCFILES  autosave.pot  base.pot  mainmenu.pot  me.lebao3105.texteditor.pot  me.lebao3105.textworker.pot  meson.build  preferences.pot  textworker.pot  vi.mo  vi.po
po/en/LC_MESSAGES/: base.po
po/vi/LC_MESSAGES/: base.po
src/: main.py  mainwindow.py  setup.py  tabs.py
src/miscs/: constants.py  file_operations.py  get_config.py  init.py
src/pages/: about.py  cmd.py  helpme.py  prefs.py
subprojects/: libtextworker.wrap
tests/: __init__.py  helloworld.ini  test_about.py  test_configs.py  test_log.py  test_prefs.py
texteditor/: __init__.py  __main__.py  defs.py.in  editor.py  file_operations.py  main.py  mainwindow.py  me.lebao3105.texteditor.in  meson.build  tabs.py
texteditor/backend/: __init__.py  configs.py  constants.py  file_operations.py  get_config.py  logger.py  meson.build  textwidget.py
texteditor/extensions/: autosave.py  cmd.py  finding.py  generic.py  meson.build
texteditor/icons/: meson.build
texteditor/miscs/: autosave.py  constant.py  constants.py  file_operations.py  get_config.py  init.py  meson.build  showlog.py  textwidget.py
texteditor/pages/: about.py  cmd.py
texteditor/views/: about.py  about.ui  autosave.ui  menubar.ui  meson.build
textworker/: __init__.py  __main__.py  assets.py  defs.py.in  editor.py  file_operations.py  generic.py  icon.py  main.py  mainwindow.py  me.lebao3105.textworker.in  merges.json  meson.build  splash.py  tabs.py  textwidget.py
textworker/backend/: __init__.py  constants.py  file_operations.py  get_config.py  logger.py  meson.build
textworker/extensions/: __init__.py  about.py  autosave.py  cmd.py  gitsp.py  mergedialog.py  meson.build  multiview.py  proj.py  settings.py
textworker/icons/: meson.build
textworker/images/: meson.build
textworker/ui/: __init__.py  about.fbp  about.py  about.xrc  aboutdialog.fbp  auistyles.py  autosave.fbp  autosave.py  autosave.xrc  editor.py  mainmenu.fbp  mainmenu.xrc  mainwindow.py  meson.build  multiview.py  preferences.fbp  preferences.xrc  settings.py  tabs.py
