[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textworker"
version = "1.6b0"

description = "Just a text editor"
readme = "README.md"

authors = [
    {name = "Le Bao Nguyen", email = "bao12345yocoo@gmail.com"}
]

license = {file = "LICENSE"}

requires-python = ">=3.10"
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/lebao3105/texteditor"
Repository = "https://github.com/lebao3105/texteditor"
Issues = "https://github.com/lebao3105/texteditor/issues"
Changelog = "https://github.com/lebao3105/texteditor/blob/main/CHANGELOG"

[project.gui-scripts]
textworker = "textworker.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["textworker"]

# https://stackoverflow.com/questions/73600082
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
