[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "textworker"

description = "Just a text editor"
readme = "README.md"

authors = [
    {name = "Le Bao Nguyen", email = "bao12345yocoo@gmail.com"}
]

license = {file = "LICENSE"}

requires-python = ">=3.10"
dynamic = ["dependencies", "version"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

[project.urls]
Homepage = "https://gitlab.com/textworker/legacy-python/textworker"
Repository = "https://gitlab.com/textworker/legacy-python/textworker"
Issues = "https://gitlab.com/textworker/legacy-python/textworker/issues"
Changelog = "https://gitlab.com/textworker/legacy-python/textworker/blob/main/CHANGELOG"

[project.gui-scripts]
textworker = "textworker.__main__:main"

[project.scripts]
textworker = "textworker.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["textworker*", "textworker.ui*"]

# https://stackoverflow.com/questions/73600082
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "textworker.__version__"}
